2013-01-14  Tejas Belagod  <tejas.belagod@arm.com>

	* gcc.target/aarch64/aarch64/vect-ld1r-compile-fp.c: New.
	* gcc.target/aarch64/vect-ld1r-compile.c: New.
	* gcc.target/aarch64/vect-ld1r-fp.c: New.
	* gcc.target/aarch64/vect-ld1r.c: New.
	* gcc.target/aarch64/vect-ld1r.x: New.

2012-01-14  Andi Kleen  <ak@linux.intel.com>

	PR target/55948
	* gcc.target/i386/hle-clear-rel.c: New file
	* gcc.target/i386/hle-store-rel.c: New file.

2013-01-14  Harald Anlauf  <anlauf@gmx.de>

	* gfortran.dg/aint_anint_1.f90: Add dg-do run.
	* gfortran.dg/bounds_check_4.f90: Likewise.
	* gfortran.dg/inquire_10.f90: Likewise.
	* gfortran.dg/minloc_3.f90: Likewise.
	* gfortran.dg/minlocval_3.f90: Likewise.
	* gfortran.dg/module_double_reuse.f90: Likewise.
	* gfortran.dg/mvbits_1.f90: Likewise.
	* gfortran.dg/oldstyle_1.f90: Likewise.
	* gfortran.dg/pr20163-2.f: Likewise.
	* gfortran.dg/save_1.f90: Likewise.
	* gfortran.dg/scan_1.f90: Likewise.
	* gfortran.dg/select_char_1.f90: Likewise.
	* gfortran.dg/shape_4.f90: Likewise.
	* gfortran.dg/coarray_29_2.f90: Fix dg-do directive.
	* gfortran.dg/function_optimize_10.f90: Likewise.
	* gfortran.dg/gomp/appendix-a/a.11.2.f90: Likewise.
	* gfortran.dg/used_types_17.f90: Likewise.
	* gfortran.dg/used_types_18.f90: Likewise.

2013-01-13  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/54286
	* gfortran.dg/proc_ptr_result_8.f90 : New test.

2013-01-13  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.dg/unroll_5.c: Add nomips16 attributes.

2013-01-13  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.dg/tree-ssa/ssa-dom-thread-4.c: Update expected results for MIPS.

2013-01-12  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/55072
	* gfortran.dg/assumed_type_2.f90: Fix test case.
	* gfortran.dg/internal_pack_13.f90: New test.
	* gfortran.dg/internal_pack_14.f90: New test.

2013-01-08  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/55868
	* gfortran.dg/unlimited_polymorphic_8.f90: Update