@@ -1,3 +1,7 @@
+2013-01-14  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* gcc.dg/tree-ssa/slsr-8.c: Allow widening multiplications.
+
 2013-01-14  Tejas Belagod  <tejas.belagod@arm.com>
 
 	* gcc.target/aarch64/aarch64/vect-ld1r-compile-fp.c: New.
